--- a/p5/SD_p5/index.html
+++ b/p5/SD_p5/index.html
@@ -14,7 +14,7 @@
   <script src="../p5.js"></script>
   <script src="../addons/p5.sound.min.js"></script>
   <!--- <script src="sketch.js"></script> -->
-  <script src="test.js"></script>
+  <script src="FinalStarAnimation.js"></script>
     
     
 </head>
