--- a/p5/SD_p5/StarrySky.html
+++ b/p5/SD_p5/StarrySky.html
@@ -13,10 +13,7 @@
   </style>
   <script src="../p5.js"></script>
   <script src="../addons/p5.sound.min.js"></script>
-  <!--- <script src="sketch.js"></script> -->
-  <script src="test.js"></script>
-    
-    
+  <script src="StarrySky.js"></script>
 </head>
 
 <body>
